--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,7 +28,8 @@
             "console": "integratedTerminal",
             "args": [
                 "/scratch/Nando/HAC2/data/OtherBuildings/ZMB/ZMB_buildings_v2_0_count.tif",
-                "/scratch/Nando/HAC2/data/OtherBuildings/ZMB/",
+                // "/scratch/Nando/HAC2/data/OtherBuildings/ZMB/",
+                "/scratch/Nando/HAC2/data/OtherBuildings/ZMB/open_buildings_v1_polygons_wb_10m_ZMB.csv",
                 "/scratch/Nando/HAC2/data/OtherBuildings/ZMB/ZMB_own_google_raster_area.tif", 
             ]
         },
