--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,7 +30,7 @@
                 "../../data/OtherBuildings/ZAF/Subnational/Shapefile/zaf_subnational_2000_2020.shp",
                 "../../data/OtherBuildings/ZAF/Subnational/zaf_subnational_admin_2000_2020.tif",
                 "../../data/OtherBuildings/ZAF/zaf_population_2000_2020.csv",
-                "2020",
+                "P_2020",
                 "preprocessed_data_3_zaf.pkl",
                 "zaf"
             ]
@@ -47,7 +47,7 @@
             "../../data/OtherBuildings/ZAF/ZAF_own_google_meanarea.tif",
         ]
         },{
-            "name": "Py: ZAF wpop preprocessing_pop_data.py",
+            "name": "Py: ZAF ERROR wpop preprocessing_pop_data.py",
         "type": "python",
         "request": "launch",
         "program": "preprocessing_pop_data.py",
@@ -400,6 +400,43 @@
                 "--max_step", "150000",
                 //"--population_target", "True"
                 "--name", "this-is-a-test-for-zmb"
+            ]
+        },
+        {
+            "name": "ZAF LogL1 kernel superpixel_disagg_model.py fold x",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            //"justMyCode": false,
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [
+                "-train", "zaf",
+                "-train_lvl", "f",
+                "-test", "zaf", 
+                // "-lr", "0.0001", 
+                "-lr", "0.00001", 
+                "-wr", "0.01",
+                "--dropout", "0.4",
+                "-optim", "adam",
+                "-adamwr", "0",
+                "-lstep", "800",
+                "--validation_fold", "0",
+                "-rs", "1610",
+                "-rsf", "1610",
+                "-mm", "d", 
+                "--loss", "LogL1", 
+                "--kernel_size", "1,1,1,1",
+                "--admin_augment", "True",
+                //"--population_target", "True",
+                "--input_scaling", "True",
+                "--output_scaling", "True", 
+                "--sampler", "custom",
+                "--max_step", "150000",
+                //"--population_target", "True"
+                "--name", "this-is-a-test-for-zaf"
             ]
         },{
             "name": "MOZ_CV LogL1 kernel superpixel_disagg_model.py fold x",
