--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,10 +21,25 @@
                 "P_2020"
             ]
         },{
+            "name": "Py: ZAF preprocessing_wp_census_data.py Sat2Pop",
+            "type": "python",
+            "request": "launch",
+            "program": "preprocessing_wp_pop_data.py",
+            "console": "integratedTerminal",
+            "args": [
+                "../../data/OtherBuildings/ZAF/Subnational/Shapefile/zaf_subnational_2000_2020.shp",
+                "../../data/OtherBuildings/ZAF/Subnational/zaf_subnational_admin_2000_2020.tif",
+                "../../data/OtherBuildings/ZAF/zaf_population_2000_2020.csv",
+                "P_2020",
+                "preprocessed_data_4_zaf_Sat2Pop.pkl",
+                "zaf",
+                "Sat2Pop"
+            ]
+        },{
             "name": "Py: ZAF preprocessing_wp_census_data.py",
             "type": "python",
             "request": "launch",
-            "program": "preprocessing_zaf_pop_data.py",
+            "program": "preprocessing_wp_pop_data.py",
             "console": "integratedTerminal",
             "args": [
                 "../../data/OtherBuildings/ZAF/Subnational/Shapefile/zaf_subnational_2000_2020.shp",
@@ -32,7 +47,8 @@
                 "../../data/OtherBuildings/ZAF/zaf_population_2000_2020.csv",
                 "P_2020",
                 "preprocessed_data_3_zaf.pkl",
-                "zaf"
+                "zaf",
+                "Geodata"
             ]
         },{
             "name": "Py: DZA preprocessing_wp_census_data.py",
@@ -632,8 +648,8 @@
                 "-train", "rwa",
                 "-train_lvl", "f",
                 "-test", "rwa",
-                "-lr", "0.0001",
-                "-wr", "0.000001",
+                "-lr", "0.00001",
+                "-wr", "0.01",
                 "--dropout", "0.0",
                 "-optim", "adam",
                 "-adamwr", "0",
@@ -643,7 +659,7 @@
                 "-rsf", "1610",
                 "-mm", "m", 
                 "--loss", "LogL1", 
-                "--kernel_size", "3,3,1,1",
+                "--kernel_size", "3,3,3,3",
                 // "--admin_augment", "True",
                 //"--population_target", "True",
                 // "--input_scaling", "True",
