bug fix for larger indices, switched from utin16 to uint32

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ outputs/
 datasets/
 datasets2/
 dataset_deleteme/
+datasets_euler_Sat2Pop/
+datasets_euler/
 __pycache__/
 euler_job_submission/
 euleroutputs/
