--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ datasets_euler_Sat2Pop_2/
 datasets_euler/
 datasets_Sat2Pop_2/
 datasets_Sat2Pop/
+datasets_Sat2Pop_lessfeats/
 __pycache__/
 euler_job_submission/
 euleroutputs/
