--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ datasets_euler_Sat2Pop/
 datasets_euler_Sat2Pop_2/
 datasets_euler/
 datasets_Sat2Pop/
+datasets_Sat2Pop_delme/
 datasets_Sat2Pop_2/
 datasets_Sat2Pop_3/
 datasets_Sat2Pop_lessfeats/
