--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -519,8 +519,8 @@
                 "--kernel_size", "1,1,1,1",
                 "--admin_augment", "True",
                 //"--population_target", "True",
-                "--input_scaling", "True",
-                "--output_scaling", "True", 
+                // "--input_scaling", "True",
+                // "--output_scaling", "True", 
                 "--sampler", "custom",
                 "--max_step", "150000",
                 //"--population_target", "True"
@@ -553,11 +553,11 @@
                 "-rsf", "1610",
                 "-mm", "d", 
                 "--loss", "LogL1", 
-                "--kernel_size", "1,1,1,1",
+                "--kernel_size", "3,3,3,3,3,3",
                 "--admin_augment", "True",
                 //"--population_target", "True",
-                "--input_scaling", "True",
-                "--output_scaling", "True", 
+                // "--input_scaling", "True",
+                // "--output_scaling", "True", 
                 "--sampler", "custom",
                 "--max_step", "150000",
                 //"--population_target", "True"
@@ -667,8 +667,8 @@
                 "--kernel_size", "1,1,1,1",
                 // "--admin_augment", "True",
                 //"--population_target", "True",
-                "--input_scaling", "True",
-                "--output_scaling", "True", 
+                // "--input_scaling", "True",
+                // "--output_scaling", "True", 
                 "--sampler", "custom",
                 "--max_step", "150000",
                 //"--population_target", "True"
@@ -699,7 +699,7 @@
                 "-rsf", "1610",
                 "-mm", "m", 
                 "--loss", "LogL1", 
-                "--kernel_size", "3,3,3,3",
+                "--kernel_size", "3,3,3,3,3,3,3",
                 // "--admin_augment", "True",
                 //"--population_target", "True",
                 // "--input_scaling", "True",
