--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ datasets2/
 dataset_deleteme/
 datasets_euler_Sat2Pop/
 datasets_euler_Sat2Pop_2/
+datasets_euler_Sat2Pop_3ss/
 datasets_euler/
 datasets_Sat2Pop/
 datasets_Sat2Pop_delme/
